[menu] fix menu close trigger, fix menu scroll on mobile safari

--- a/frontend/src/app/components/menu/menu.component.scss
+++ b/frontend/src/app/components/menu/menu.component.scss
@@ -8,6 +8,7 @@
   transition: 0.25s;
   margin-left: -250px;
   box-shadow: 5px 0px 30px 0px #000;
+  padding-bottom: 20px;
 }
 
 .scrollable {
@@ -37,6 +38,9 @@
   padding-right: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
+  @media (max-width: 991px) {
+    padding-bottom: 200px;
+  }
 }
 
 @media screen and (max-height: 450px) {
